qtquickengine: Check if KNSCore::Engine is valid before searching

Otherwise the application would crash, which should not happen in any
case.

BUG: 402432
FIXED-IN: 5.80